--- a/translations/tengyur/placeholders/195-001_toh4282-kalapasutra.xml
+++ b/translations/tengyur/placeholders/195-001_toh4282-kalapasutra.xml
@@ -8,14 +8,15 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Kalāpa­sūtra</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">ka lA pa'i mdo/</title>
                 <title xml:lang="bo" type="mainTitle">ཀ་ལཱ་པའི་མདོ།</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-7">Paul Hackett</author>
+                <author role="translatorMain" xml:id="UT23703-195-001-1"/>
+                <author role="translatorEng" xml:id="UT23703-195-001-2">Paul Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="4"/>
                 <idno xml:id="UT23703-195-001"/>
                 <date/>
             </publicationStmt>
@@ -23,8 +24,8 @@
                 <bibl key="toh4282" type="text">
                     <ref>Toh 4282</ref>
                     <biblScope>ff. 1v-20r</biblScope>
-                    <author ref="eft:entity-18576" xml:lang="Sa-Ltn">Śarvavarman</author>
-                    <author role="translatorTib" ref="eft:entity-17547" xml:lang="Bo-Ltn">dpal ldan blo gros brtan pa</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-195-001-3">Śarvavarman</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-195-001-4">dpal ldan blo gros brtan pa</author>
                     <location work="UT23703" count-pages="38">
                         <volume number="195" start-page="2" end-page="39"/>
                     </location>
@@ -32,15 +33,34 @@
                     <idno source-id="O1JC76301JC11066" work="W23703"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-03-23T14:15:10.014Z" user="admin">23/03/2022 14:15:10</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-4269-4305_PH_new_v2.4.xml" date-time="2021-11-02T14:22:13.369Z" user="admin"/>
-                <note type="updated" update="attribution" value="sarvavarman" import="tengyur-data-4269-4305_PH_new_v2.4.xml" date-time="2021-11-02T14:22:13.369Z" user="admin">According to Durgasiṃha, the bulk of the Kālapa Sūtras are said to have been written by Śarvavarman, but the final section (kṛdanta) he
-            attributes to Vararuci Kātyāyana.</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-03-23T14:14:37.057Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-23T14:14:37.057Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-03-23T14:15:06.479Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T14:22:13.369Z" type="import" xml:id="UT23703-195-001-5" source="tengyur-data-4269-4305_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2021-11-02T14:22:13.369Z" type="attribution" xml:id="UT23703-195-001-6" source="tengyur-data-4269-4305_PH_new_v2.4.xml">
+                    <desc>According to Durgasiṃha, the bulk of the Kālapa Sūtras are said to have been written by Śarvavarman, but the final section (kṛdanta) he
+            attributes to Vararuci Kātyāyana.</desc>
+                </change>
+                <change who="#line-tofte" when="2022-03-23T14:14:37.057Z" type="translation-status" status="3" xml:id="UT23703-195-001-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-03-23T14:14:37.057Z" type="text-version" status="0.0.1" xml:id="UT23703-195-001-8">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-03-23T14:15:06.479Z" type="text-version" status="0.0.2" xml:id="UT23703-195-001-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT23703-195-001-10">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-06T07:33:35.195Z" type="translation-status" status="4" xml:id="UT23703-195-001-11">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-06T07:33:35.195Z" type="text-version" status="0.0.4" xml:id="UT23703-195-001-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
