--- a/translations/kangyur/placeholders/065-001_toh238-the_sutra_of_the_deliberation_on_the_dharma.xml
+++ b/translations/kangyur/placeholders/065-001_toh238-the_sutra_of_the_deliberation_on_the_dharma.xml
@@ -18,15 +18,16 @@
                 <editor role="projectEditor" xml:id="UT22084-065-001-6">Ryan Damron</editor>
                 <editor role="copyEditor" xml:id="UT22084-065-001-27">Konchog Norbu</editor>
                 <editor role="associateEditor" xml:id="UT22084-065-001-46">Rory Lindsay</editor>
+                <editor role="TEImarkupEditor" xml:id="UT22084-065-001-58">Martina Cotter</editor>
                 <sponsor xml:id="UT22084-065-001-7">Lily Xu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.16 <date>2024</date>
+                <edition>v 0.0.18 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-065-001"/>
                 <date/>
             </publicationStmt>
@@ -114,6 +115,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-01T12:11:11.559Z" type="text-version" status="0.0.16" xml:id="UT22084-065-001-49">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-06T13:00:37.182Z" type="text-version" status="0.0.17" xml:id="UT22084-065-001-59">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-06T13:01:24.033Z" type="translation-status" status="2.a" xml:id="UT22084-065-001-60">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-06T13:01:24.033Z" type="text-version" status="0.0.18" xml:id="UT22084-065-001-61">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
