--- a/translations/kangyur/placeholders/072-021_toh321-verses_on_circumambulating_reliquaries.xml
+++ b/translations/kangyur/placeholders/072-021_toh321-verses_on_circumambulating_reliquaries.xml
@@ -19,12 +19,12 @@
                 <editor role="projectEditor" xml:id="UT22084-072-021-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.15 <date>2024</date>
+                <edition>v 0.0.16 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-072-021"/>
                 <date/>
             </publicationStmt>
@@ -108,6 +108,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-29T10:05:19.77Z" type="text-version" status="0.0.15" xml:id="UT22084-072-021-53">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-06T13:04:12.085Z" type="translation-status" status="2.a" xml:id="UT22084-072-021-54">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-06T13:04:12.085Z" type="text-version" status="0.0.16" xml:id="UT22084-072-021-55">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
