--- a/translations/kangyur/placeholders/072-022_toh322-verses_on_prasenajit.xml
+++ b/translations/kangyur/placeholders/072-022_toh322-verses_on_prasenajit.xml
@@ -15,11 +15,11 @@
                 <editor role="projectEditor" xml:id="UT22084-072-022-32">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-072-022"/>
                 <date/>
             </publicationStmt>
@@ -97,6 +97,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-29T10:08:03.335Z" type="text-version" status="0.0.13" xml:id="UT22084-072-022-35">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-06T13:05:23.667Z" type="translation-status" status="2.a" xml:id="UT22084-072-022-36">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-06T13:05:23.667Z" type="text-version" status="0.0.14" xml:id="UT22084-072-022-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
