--- a/translations/kangyur/translations/042-003_toh62-the_questions_of_rastrapala.xml
+++ b/translations/kangyur/translations/042-003_toh62-the_questions_of_rastrapala.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-042-003-321953">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.18 <date>2023</date>
+                <edition>v 1.0.19 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -205,6 +205,9 @@
                 </change>
                 <change who="#konchog" when="2023-12-14T02:18:56.132Z" type="text-version" status="1.0.18" xml:id="UT22084-042-003-322000">
                     <desc>Per discussion with JC, one change of a term in the text and glossary.</desc>
+                </change>
+                <change who="#celso" when="2024-02-07T01:57:13.865Z" type="text-version" status="1.0.19" xml:id="UT22084-042-003-322001">
+                    <desc>Corrected Skt attestations</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -4281,7 +4284,7 @@
                     <item>
                         <gloss xml:id="UT22084-042-003-667" type="term" mode="match">
                             <term type="translationMain">Dharma</term>
-                            <term xml:lang="Sa-Ltn" type="attestedSource">dharma</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">dharma</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">chos</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཆོས།</term>
                             <note type="definition" rend="prepend">
@@ -5143,7 +5146,7 @@
                             <term xml:lang="bo" type="attestedSource" n="1">ཏིང་ངེ་འཛིན།</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="2">ting ’dzin</term>
                             <term xml:lang="bo" type="attestedSource" n="2">ཏིང་འཛིན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A general term for states of deep <term rend="ignore">concentration</term>. One of the synonyms
                                 for meditation, referring in particular to a state of complete <term rend="ignore">concentration</term> or
                                 focus.</p>
@@ -5892,7 +5895,7 @@
                             <term xml:lang="bo" type="attestedSource" n="2">བདེ་བར་གཤེགས།</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="3">bde gshegs</term>
                             <term xml:lang="bo" type="attestedSource" n="3">བདེ་གཤེགས།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>One of the standard epithets of the Buddha Śākyamuni and other buddhas. According to Buddhaghoṣa,
                                 the term means that the way the Buddha went (Skt. <foreign xml:lang="Sa-Ltn" type="term">gata</foreign>) is good (Skt.
                                     <foreign xml:lang="Sa-Ltn" type="term">su</foreign>), and where he went (<foreign xml:lang="Sa-Ltn" type="term">gata</foreign>) is good (<foreign xml:lang="Sa-Ltn" type="term">su</foreign>). </p>
@@ -6257,7 +6260,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">akṣobhya</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mi ’khrug pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མི་འཁྲུག་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Name of a Buddha dwelling in an eastern region.</p>
                             </note>
                         </gloss>
