--- a/translations/kangyur/translations/071-011_toh297-multitude_of_constituents.xml
+++ b/translations/kangyur/translations/071-011_toh297-multitude_of_constituents.xml
@@ -39,7 +39,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.5 <date>2023</date>
+                <edition>v 1.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -211,6 +211,12 @@
                 </change>
                 <change who="#martina-cotter" when="2023-09-27T21:36:37.287Z" type="text-version" status="1.0.5" xml:id="UT22084-071-011-215">
                     <desc>Updated typo.</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.0.6" xml:id="UT22084-071-011-216">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#celso" when="2024-02-07T02:00:26.63Z" type="text-version" status="1.0.7" xml:id="UT22084-071-011-217">
+                    <desc>Corrected Skt attestations</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -1517,7 +1523,7 @@
                                         <item>
                         <gloss xml:id="UT22084-071-011-206" type="person" mode="match">
                             <term type="translationMain">Surendrabodhi</term>
-                            <term xml:lang="Sa-Ltn" type="attestedSource">surendrabodhi</term>
+                                <term xml:lang="Sa-Ltn" type="attestedOther">surendrabodhi</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">su ren+d+ra bo d+hi</term>
                             <term xml:lang="bo" type="attestedSource" n="1">སུ་རེནྡྲ་བོ་དྷི།</term>
                             <note type="definition">
@@ -1526,11 +1532,11 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-071-011-207">
-                                                  <term type="translationMain">Bandé Yeshé Dé</term>
-                                                  <term xml:lang="Bo-Ltn" n="1">ye shes sde</term>
-                                                  <term xml:lang="bo" n="1">ཡེ་ཤེས་སྡེ།</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-071-011-207" type="person" mode="match">
+                            <term type="translationMain">Bandé Yeshé Dé</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ye shes sde</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">ཡེ་ཤེས་སྡེ།</term>
+                        </gloss>
                     </item>
                                 </list>
                         </div>
