--- a/translations/kangyur/placeholders/043-017_toh80-the_sutra_of_the_devaputra_susthitamatis_questions.xml
+++ b/translations/kangyur/placeholders/043-017_toh80-the_sutra_of_the_devaputra_susthitamatis_questions.xml
@@ -4,17 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">lha'i bu blo gros rab gnas kyis zhus pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">susthitamatidevaputra­paripṛcchāsūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Devaputra Susthitamati's Questions</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Susthitamatidevaputra­paripṛcchāsūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">lha'i bu blo gros rab gnas kyis zhus pa'i mdo/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryasusthitamatidevaputra­paripṛcchā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha'i bu blo gros rab gnas kyis zhus pa zhes bya ba theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasusthitamatidevaputra­paripṛcchā­nāmamahāyānasūtra</title>
+                <author role="translatorMain" xml:id="UT22084-043-017-1"/>
+                <author role="translatorEng" xml:id="UT22084-043-017-2">Sophie McGrath</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-043-017"/>
                 <date/>
             </publicationStmt>
@@ -30,9 +33,27 @@
                     <idno source-id="O1JC114941JC11621" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-19T09:21:22.65Z" user="admin">19/07/2023 09:21:22</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-19T09:21:18.346Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-07-19T09:21:18.346Z" user="line-tofte">0.0.1</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-07-19T09:21:18.346Z" type="translation-status" status="3" xml:id="UT22084-043-017-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-19T09:21:18.346Z" type="text-version" status="0.0.1" xml:id="UT22084-043-017-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-19T09:21:52.993Z" type="text-version" status="0.0.2" xml:id="UT22084-043-017-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-043-017-6">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T13:34:44.523Z" type="translation-status" status="2.g" xml:id="UT22084-043-017-7">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T13:34:44.523Z" type="text-version" status="0.0.4" xml:id="UT22084-043-017-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
