--- a/translations/kangyur/placeholders/072-034_toh334-the_sutra_of_nandika.xml
+++ b/translations/kangyur/placeholders/072-034_toh334-the_sutra_of_nandika.xml
@@ -17,11 +17,11 @@
                 <editor role="projectEditor" xml:id="UT22084-072-034-23">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-072-034"/>
                 <date/>
             </publicationStmt>
@@ -84,6 +84,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-29T10:40:04.647Z" type="text-version" status="0.0.10" xml:id="UT22084-072-034-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T13:50:00.071Z" type="translation-status" status="2.c" xml:id="UT22084-072-034-27">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T13:50:00.071Z" type="text-version" status="0.0.11" xml:id="UT22084-072-034-28">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
