--- a/translations/kangyur/placeholders/035-021_toh44-21-chapter_21_pure_conduct.xml
+++ b/translations/kangyur/placeholders/035-021_toh44-21-chapter_21_pure_conduct.xml
@@ -4,16 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">tshang par spyod pa'i le'u/</title>
                 <title type="mainTitle" xml:lang="en">Chapter 21: Pure Conduct</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">tshang par spyod pa'i le'u/</title>
                 <title type="otherTitle" xml:lang="zh">梵行品</title>
+                <author role="translatorMain" xml:id="UT22084-035-021-5">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-035-021-6">Ana Cristina Lopes</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-035-021"/>
             </publicationStmt>
             <sourceDesc>
@@ -39,6 +41,15 @@
                     <desc>3</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-28T13:45:56.772Z" type="text-version" status="0.0.3" xml:id="UT22084-035-021-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T13:46:28.044Z" type="text-version" status="0.0.4" xml:id="UT22084-035-021-7">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T14:13:55.381Z" type="translation-status" status="2.h" xml:id="UT22084-035-021-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T14:13:55.381Z" type="text-version" status="0.0.5" xml:id="UT22084-035-021-9">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
