--- a/translations/kangyur/placeholders/035-020_toh44-20-chapter_20_the_ten_categories_of_bodhisattvas.xml
+++ b/translations/kangyur/placeholders/035-020_toh44-20-chapter_20_the_ten_categories_of_bodhisattvas.xml
@@ -7,13 +7,15 @@
                 <title type="mainTitle" xml:lang="en">Chapter 20: The Ten Categories of Bodhisattvas</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">byang sems rnam dgod bcu bstan pa'i le'u/</title>
                 <title type="otherTitle" xml:lang="zh">菩薩十住品/十住品</title>
+                <author role="translatorMain" xml:id="UT22084-035-020-6">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-035-020-7">Ana Cristina Lopes</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-035-020"/>
             </publicationStmt>
             <sourceDesc>
@@ -42,6 +44,15 @@
                     <desc>3</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-28T13:44:31.843Z" type="text-version" status="0.0.5" xml:id="UT22084-035-020-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T13:45:16.125Z" type="text-version" status="0.0.6" xml:id="UT22084-035-020-8">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T14:22:10.415Z" type="translation-status" status="2.h" xml:id="UT22084-035-020-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T14:22:10.415Z" type="text-version" status="0.0.7" xml:id="UT22084-035-020-10">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
