--- a/translations/kangyur/placeholders/035-019_toh44-19-chapter_19_the_verses_of_the_assembly_of_bodhisattvas.xml
+++ b/translations/kangyur/placeholders/035-019_toh44-19-chapter_19_the_verses_of_the_assembly_of_bodhisattvas.xml
@@ -4,16 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">byang sems tshogs kyi tshigs bcad le'u/</title>
                 <title type="mainTitle" xml:lang="en">Chapter 19: The Verses of the Assembly of Bodhisattvas</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">byang sems tshogs kyi tshigs bcad le'u/</title>
                 <title type="otherTitle" xml:lang="zh">菩薩雲集說偈品/菩薩雲集妙勝殿上說偈品/須彌頂上偈讚品</title>
+                <author role="translatorMain" xml:id="UT22084-035-019-5">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-035-019-6">Ana Cristina Lopes</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-035-019"/>
             </publicationStmt>
             <sourceDesc>
@@ -39,6 +41,15 @@
                     <desc>3</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-28T13:43:33.081Z" type="text-version" status="0.0.3" xml:id="UT22084-035-019-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T13:44:03.273Z" type="text-version" status="0.0.4" xml:id="UT22084-035-019-7">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T14:29:51.479Z" type="translation-status" status="2.h" xml:id="UT22084-035-019-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T14:29:51.479Z" type="text-version" status="0.0.5" xml:id="UT22084-035-019-9">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
