--- a/translations/kangyur/placeholders/059-001_toh158-the_sutra_of_the_questions_of_brahma.xml
+++ b/translations/kangyur/placeholders/059-001_toh158-the_sutra_of_the_questions_of_brahma.xml
@@ -5,20 +5,21 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">tshangs pas zhus pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">brahmaparipṛcchāsūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Brahmaparipṛcchāsūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Questions of Brahmā</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa tshangs pas zhus pa zhes bya ba theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryabrahma­paripṛcchā­nāmamahāyānasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-34"/>
-                <author role="translatorEng" ref="contributors.xml#person-204">ErdeneBaatar Erdene-Ochir</author>
-                <author role="translatorEng" ref="contributors.xml#person-203">Jed Forman</author>
-                <consultant role="projectManager" ref="contributors.xml#person-203">Jed Forman</consultant>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryabrahma­paripṛcchā­nāmamahāyānasūtra</title>
+                <author role="translatorMain" xml:id="UT22084-059-001-1"/>
+                <author role="translatorEng" xml:id="UT22084-059-001-2">ErdeneBaatar Erdene-Ochir</author>
+                <author role="translatorEng" xml:id="UT22084-059-001-3">Jed Forman</author>
+                <consultant role="projectManager" xml:id="UT22084-059-001-4">Jed Forman</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-059-001"/>
                 <date/>
             </publicationStmt>
@@ -26,8 +27,8 @@
                 <bibl key="toh158" type="text">
                     <ref>Toh 158</ref>
                     <biblScope>vol.59, ff. 1r-10v(pp.1-20)</biblScope>
-                    <author role="translatorTib">t. jinamitra</author>
-                    <author role="translatorTib">ye shes sde</author>
+                    <author role="translatorTib" xml:id="UT22084-059-001-13">t. jinamitra</author>
+                    <author role="translatorTib" xml:id="UT22084-059-001-14">ye shes sde</author>
                     <location work="UT4CZ5369" count-pages="19">
                         <volume number="59" start-page="2" end-page="20"/>
                     </location>
@@ -35,17 +36,39 @@
                     <idno source-id="O1JC114941JC11756" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-03T10:30:09.046Z" user="admin">03/09/2021 10:30:09</note>
-                <note type="updated" update="translation-status" value="3" date-time="2020-12-09T08:15:06.89Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-12-09T08:15:06.89Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-04T10:48:54.499Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-04T10:49:12.234Z" user="line-tofte">Auto (update-contributors)</note>
-            
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-09-03T10:22:02.592Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-09-03T10:22:02.592Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-09-03T10:30:03.699Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-12-09T08:15:06.89Z" type="translation-status" status="3" xml:id="UT22084-059-001-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2020-12-09T08:15:06.89Z" type="text-version" status="0.0.1" xml:id="UT22084-059-001-6">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-04T10:48:54.499Z" type="text-version" status="0.0.2" xml:id="UT22084-059-001-7">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-04T10:49:12.234Z" type="text-version" status="0.0.3" xml:id="UT22084-059-001-8">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-09-03T10:22:02.592Z" type="translation-status" status="2.h" xml:id="UT22084-059-001-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-09-03T10:22:02.592Z" type="text-version" status="0.0.4" xml:id="UT22084-059-001-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-09-03T10:30:03.699Z" type="text-version" status="0.0.5" xml:id="UT22084-059-001-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-059-001-12">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T15:31:10.322Z" type="translation-status" status="2.g" xml:id="UT22084-059-001-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T15:31:10.322Z" type="text-version" status="0.0.7" xml:id="UT22084-059-001-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
