--- a/translations/kangyur/placeholders/066-012_toh254-the_sutra_of_dharmaketu.xml
+++ b/translations/kangyur/placeholders/066-012_toh254-the_sutra_of_dharmaketu.xml
@@ -17,11 +17,11 @@
                 <editor role="copyEditor" xml:id="UT22084-066-012-33">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.16 <date>2024</date>
+                <edition>v 0.0.17 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-066-012"/>
                 <date/>
             </publicationStmt>
@@ -105,6 +105,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-17T15:38:42.8Z" type="text-version" status="0.0.16" xml:id="UT22084-066-012-38">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T15:39:23.757Z" type="translation-status" status="2.b" xml:id="UT22084-066-012-39">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T15:39:23.757Z" type="text-version" status="0.0.17" xml:id="UT22084-066-012-40">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
