--- a/translations/kangyur/placeholders/090-023_toh579,935-the_incantation_the_essence_of_the_six_perfections.xml
+++ b/translations/kangyur/placeholders/090-023_toh579,935-the_incantation_the_essence_of_the_six_perfections.xml
@@ -10,15 +10,16 @@
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī, the Essence of the Six Perfections</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">phar phyin drug gi snying po'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa drug gi snying po'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-090-023-1"/>
+                <author role="translatorMain" xml:id="UT22084-090-023-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-090-023-2">Paul Hackett</author>
+                <editor role="projectEditor" xml:id="UT22084-090-023-13">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-090-023"/>
                 <date/>
             </publicationStmt>
@@ -66,6 +67,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2023-12-19T16:10:10.116Z" type="text-version" status="0.0.5" xml:id="UT22084-090-023-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-19T16:10:40.683Z" type="text-version" status="0.0.6" xml:id="UT22084-090-023-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:01:46.312Z" type="translation-status" status="2.f" xml:id="UT22084-090-023-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:01:46.312Z" type="text-version" status="0.0.7" xml:id="UT22084-090-023-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
