--- a/translations/kangyur/placeholders/090-024_toh580,936-the_incantation_that_captures_the_six_perfections.xml
+++ b/translations/kangyur/placeholders/090-024_toh580,936-the_incantation_that_captures_the_six_perfections.xml
@@ -10,15 +10,16 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa drug bzung bar 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa drug gzung bar 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">phar phyin drug gzung ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-090-024-1"/>
+                <author role="translatorMain" xml:id="UT22084-090-024-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-090-024-2">Paul Hackett</author>
+                <editor role="projectEditor" xml:id="UT22084-090-024-13">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-090-024"/>
                 <date/>
             </publicationStmt>
@@ -66,6 +67,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2023-12-19T16:11:07.928Z" type="text-version" status="0.0.5" xml:id="UT22084-090-024-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-19T16:11:40.752Z" type="text-version" status="0.0.6" xml:id="UT22084-090-024-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:04:56.017Z" type="translation-status" status="2.f" xml:id="UT22084-090-024-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:04:56.017Z" type="text-version" status="0.0.7" xml:id="UT22084-090-024-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
