--- a/translations/kangyur/placeholders/090-025_toh581,937-the_incantation_that_gains_the_ten_perfections.xml
+++ b/translations/kangyur/placeholders/090-025_toh581,937-the_incantation_that_gains_the_ten_perfections.xml
@@ -9,15 +9,16 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">phar phyin bcu thob pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa bcu thob par 'gyur pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa bcu thob par 'gyur ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-090-025-1"/>
+                <author role="translatorMain" xml:id="UT22084-090-025-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-090-025-2">Paul Hackett</author>
+                <editor role="projectEditor" xml:id="UT22084-090-025-13">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-090-025"/>
                 <date/>
             </publicationStmt>
@@ -65,6 +66,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2023-12-19T16:12:13.515Z" type="text-version" status="0.0.5" xml:id="UT22084-090-025-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-19T16:12:57.218Z" type="text-version" status="0.0.6" xml:id="UT22084-090-025-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:06:15.321Z" type="translation-status" status="2.f" xml:id="UT22084-090-025-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:06:15.321Z" type="text-version" status="0.0.7" xml:id="UT22084-090-025-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
