--- a/translations/kangyur/placeholders/090-027_toh583,939-the_incantation_that_captures_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/090-027_toh583,939-the_incantation_that_captures_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -11,15 +11,16 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">sher phyin stong phrag brgya pa gzung ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong phrag brgya pa gzung bar 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong phrag brgya pa bzung bar 'gyur ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-090-027-1"/>
+                <author role="translatorMain" xml:id="UT22084-090-027-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-090-027-2">Paul Hackett</author>
+                <editor role="projectEditor" xml:id="UT22084-090-027-13">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-090-027"/>
                 <date/>
             </publicationStmt>
@@ -67,6 +68,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2023-12-19T16:13:32.8Z" type="text-version" status="0.0.5" xml:id="UT22084-090-027-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-19T16:14:09.977Z" type="text-version" status="0.0.6" xml:id="UT22084-090-027-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:07:30.467Z" type="translation-status" status="2.f" xml:id="UT22084-090-027-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:07:30.467Z" type="text-version" status="0.0.7" xml:id="UT22084-090-027-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
