--- a/translations/kangyur/placeholders/088-003_toh509,920-incantation_of_the_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
+++ b/translations/kangyur/placeholders/088-003_toh509,920-incantation_of_the_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
@@ -9,15 +9,16 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">byang chub kyi snying po'i rgyan 'bum gyi gzungs/</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī of the One Hundred Thousand Ornaments of the Essence of Awakening</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">byang chub kyi snying po'i rgyan 'bum gyi gzungs</title>
-                <author role="translatorMain" xml:id="UT22084-088-003-1"/>
+                <author role="translatorMain" xml:id="UT22084-088-003-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-088-003-2">Bruno Galasek-Hul</author>
+                <editor role="projectEditor" xml:id="UT22084-088-003-13">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-088-003"/>
                 <date/>
             </publicationStmt>
@@ -65,6 +66,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-12T13:10:09.353Z" type="text-version" status="0.0.5" xml:id="UT22084-088-003-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T16:34:08.095Z" type="text-version" status="0.0.6" xml:id="UT22084-088-003-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:17:58.51Z" type="translation-status" status="2.f" xml:id="UT22084-088-003-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:17:58.51Z" type="text-version" status="0.0.7" xml:id="UT22084-088-003-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
