--- a/translations/kangyur/placeholders/088-015_toh521,981-the_essence_of_dependent_arising.xml
+++ b/translations/kangyur/placeholders/088-015_toh521,981-the_essence_of_dependent_arising.xml
@@ -10,15 +10,16 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryapratītyasamutpādahṛdayanāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rten cing 'brel bar 'byung ba'i snying po zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rten cing 'brel bar 'byung ba'i snying po/</title>
-                <author role="translatorMain" xml:id="UT22084-088-015-1"/>
+                <author role="translatorMain" xml:id="UT22084-088-015-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-088-015-2">Bruno Galasek-Hul</author>
+                <editor role="projectEditor" xml:id="UT22084-088-015-13">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-088-015"/>
                 <date/>
             </publicationStmt>
@@ -66,6 +67,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-19T11:27:20.096Z" type="text-version" status="0.0.5" xml:id="UT22084-088-015-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-19T11:27:53.176Z" type="text-version" status="0.0.6" xml:id="UT22084-088-015-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:20:26.229Z" type="translation-status" status="2.f" xml:id="UT22084-088-015-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:20:26.229Z" type="text-version" status="0.0.7" xml:id="UT22084-088-015-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
