--- a/translations/kangyur/placeholders/062-019_toh219-the_sutra_on_putting_an_end_to_karmic_obscurations.xml
+++ b/translations/kangyur/placeholders/062-019_toh219-the_sutra_on_putting_an_end_to_karmic_obscurations.xml
@@ -13,14 +13,16 @@
                 <author role="translatorEng" xml:id="UT22084-062-019-2">Peter Alan Roberts</author>
                 <author role="translatorEng" xml:id="UT22084-062-019-3">Emily Bower</author>
                 <consultant role="projectManager" xml:id="UT22084-062-019-4">Emily Bower</consultant>
+                <editor role="projectEditor" xml:id="UT22084-062-019-23">Rory Lindsay</editor>
+                <editor role="copyEditor" xml:id="UT22084-062-019-24">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2023</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-062-019"/>
                 <date/>
             </publicationStmt>
@@ -77,6 +79,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-28T12:19:55.186Z" type="text-version" status="0.0.8" xml:id="UT22084-062-019-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-28T12:21:40.612Z" type="text-version" status="0.0.9" xml:id="UT22084-062-019-25">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:33:36.42Z" type="translation-status" status="2.d" xml:id="UT22084-062-019-26">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:33:36.42Z" type="text-version" status="0.0.10" xml:id="UT22084-062-019-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
