--- a/translations/kangyur/placeholders/089-013_toh556-the_sovereign_lord_of_sutras_the_golden_light.xml
+++ b/translations/kangyur/placeholders/089-013_toh556-the_sovereign_lord_of_sutras_the_golden_light.xml
@@ -15,15 +15,16 @@
                 <editor role="reviser" xml:id="UT22084-089-013-3">Emily Bower</editor>
                 <consultant role="projectManager" xml:id="UT22084-089-013-4">Emily Bower</consultant>
                 <editor role="projectEditor" xml:id="UT22084-089-013-5">Rory Lindsay</editor>
+                <editor role="copyEditor" xml:id="UT22084-089-013-24">Konchog Norbu</editor>
                 <sponsor xml:id="UT22084-089-013-6">E E, May-E, Minda, Chung-Da Ho</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2023</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-089-013"/>
                 <date/>
             </publicationStmt>
@@ -74,6 +75,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-28T12:18:54.303Z" type="text-version" status="0.0.8" xml:id="UT22084-089-013-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-28T12:19:25.317Z" type="text-version" status="0.0.9" xml:id="UT22084-089-013-25">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:37:44.788Z" type="translation-status" status="2.d" xml:id="UT22084-089-013-26">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:37:44.788Z" type="text-version" status="0.0.10" xml:id="UT22084-089-013-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
