--- a/translations/kangyur/placeholders/090-001_toh557-the_sovereign_lord_of_sutras_the_sublime_golden_light.xml
+++ b/translations/kangyur/placeholders/090-001_toh557-the_sovereign_lord_of_sutras_the_sublime_golden_light.xml
@@ -15,15 +15,16 @@
                 <editor role="reviser" xml:id="UT22084-090-001-3">Emily Bower</editor>
                 <consultant role="projectManager" xml:id="UT22084-090-001-4">Emily Bower</consultant>
                 <editor role="projectEditor" xml:id="UT22084-090-001-5">Rory Lindsay</editor>
+                <editor role="copyEditor" xml:id="UT22084-090-001-24">Konchog Norbu</editor>
                 <sponsor xml:id="UT22084-090-001-6">May Gu, Likai Gu and Tiffany Tai, Lillian Gu and Jerry Yen, and dedicated to George Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2023</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-090-001"/>
                 <date/>
             </publicationStmt>
@@ -74,6 +75,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-28T12:20:38.041Z" type="text-version" status="0.0.8" xml:id="UT22084-090-001-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-28T12:21:08.017Z" type="text-version" status="0.0.9" xml:id="UT22084-090-001-25">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:42:43.896Z" type="translation-status" status="2.d" xml:id="UT22084-090-001-26">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:42:43.896Z" type="text-version" status="0.0.10" xml:id="UT22084-090-001-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
