--- a/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
+++ b/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
@@ -41,7 +41,7 @@
                 <sponsor xml:id="UT22084-089-012-4103">Zhang Dada</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.6 <date>2024</date>
+                <edition>v 1.1.7 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -247,6 +247,9 @@
                 </change>
                 <change who="#konchog" when="2024-02-05T18:25:09.17Z" type="text-version" status="1.1.6" xml:id="UT22084-089-012-4165">
                     <desc>After consultation with Rory, complete reworking of the dialogue punctuation throughout ch. 26, so that the narrative sequence not correctly matches that of Toh 556 &amp; 557. Also insertion of a relevant note and one small adjustment to the chapter summary in the intro.</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-02-07T18:25:25.807Z" type="text-version" status="1.1.7" xml:id="UT22084-089-012-4166">
+                    <desc>Updated bib. entry.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -16467,7 +16470,7 @@
                         Petersburg Branch of the Institute of Oriental Studies.” In Manuscripta
                         Orientalia vol. 1, no. 1 (July 1995): 29–38. St. Petersburg: Russian Academy
                         of Sciences.</bibl>
-                    <bibl xml:id="UT22084-089-012-3250">Yuama, Akira. “The <distinct>Golden
+                    <bibl xml:id="UT22084-089-012-3250">Yuyama, Akira. “The <distinct>Golden
                             Light</distinct> in Central Asia.” In <title xml:lang="en">Annual Report
                             of the International Research Institute for Advanced Buddhology at Soka
                             University for the Academic Year 2003</title> (Tokyo: Soka University,
