--- a/translations/kangyur/placeholders/091-026_toh629,961-the_incantation_for_triumphing_over_bandits.xml
+++ b/translations/kangyur/placeholders/091-026_toh629,961-the_incantation_for_triumphing_over_bandits.xml
@@ -5,14 +5,19 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mi rgod rnam par 'joms pa'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">cauravidhvaṃsanī dhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Cauravidhvaṃsanī dhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī for Triumphing Over Bandits</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mi rgod rnam par 'joms pa zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryacauravidhvaṃsanīnāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryacauravidhvaṃsanīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mi rgod rnam par 'joms pa zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryacauravidhvaṃsanīnāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryacauravidhvaṃsanīnāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-026"/>
             </publicationStmt>
             <sourceDesc>
@@ -35,9 +40,19 @@
                     <idno source-id="O1JC114941JC12724" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:34:26.701Z" user="celso">23/09/2021 17:34:26</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-026-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T10:30:20.699Z" type="translation-status" status="3" xml:id="UT22084-091-026-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T10:30:20.699Z" type="text-version" status="0.0.1" xml:id="UT22084-091-026-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
