--- a/translations/kangyur/placeholders/096-074_toh825-auspiciousness_for_the_three_families.xml
+++ b/translations/kangyur/placeholders/096-074_toh825-auspiciousness_for_the_three_families.xml
@@ -8,14 +8,19 @@
                 <title xml:lang="Bo-Ltn" type="mainTitle">rigs gsum gyi bkra shis/</title>
                 <title xml:lang="en" type="mainTitle">Auspiciousness for the Three Families</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-074"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh825" type="text">
                     <ref>Toh 825</ref>
                     <biblScope>vol.96, ff.262r-262v(pp.523-524)</biblScope>
-                    <author ref="eft:entity-17509" xml:lang="en">Anon</author>
+                    <author xml:lang="en" xml:id="UT22084-096-074-1">Anon</author>
                     <location work="UT4CZ5369" count-pages="2">
                         <volume number="96" start-page="523" end-page="524"/>
                     </location>
@@ -25,7 +30,7 @@
                 <bibl key="toh4417" type="text">
                     <ref>Toh 4417</ref>
                     <biblScope>ff. 350v-350v</biblScope>
-                    <author ref="eft:entity-17509" xml:lang="en">Anon</author>
+                    <author xml:lang="en" xml:id="UT22084-096-074-2">Anon</author>
                     <location work="UT23703" count-pages="1">
                         <volume number="207" start-page="700" end-page="700"/>
                     </location>
@@ -33,12 +38,25 @@
                     <idno source-id="O1JC76301JC112231JC21760" work="W23703"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-11-11T10:37:32.321Z" user="admin">11/11/2021 10:37:32</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-4398-4464_PH_new_v2.4.xml" date-time="2021-11-02T14:27:22.591Z" user="admin"/>
-                <note type="updated" update="general" import="tengyur-data-4398-4464_PH_new_v2.4.xml" date-time="2021-11-02T14:27:22.591Z" user="admin">A reference to Mañjuśrī, Avalokiteśvara, and
-                    Vajrapāṇi.</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T14:27:22.591Z" type="import" xml:id="UT22084-096-074-3" source="tengyur-data-4398-4464_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2021-11-02T14:27:22.591Z" type="general" xml:id="UT22084-096-074-4" source="tengyur-data-4398-4464_PH_new_v2.4.xml">
+                    <desc>A reference to Mañjuśrī, Avalokiteśvara, and
+                    Vajrapāṇi.</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-074-5">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T10:33:41.402Z" type="translation-status" status="3" xml:id="UT22084-096-074-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T10:33:41.402Z" type="text-version" status="0.0.1" xml:id="UT22084-096-074-7">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
