--- a/translations/kangyur/placeholders/094-019_toh742,1036-the_spell_for_attaining_the_supreme.xml
+++ b/translations/kangyur/placeholders/094-019_toh742,1036-the_spell_for_attaining_the_supreme.xml
@@ -5,12 +5,17 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mchog thob pa'i rig sngags/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">agravidyāmantra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Agravidyāmantra</title>
                 <title type="mainTitle" xml:lang="en">The Spell for Attaining the Supreme</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mchog thob pa zhes bya ba/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-094-019"/>
             </publicationStmt>
             <sourceDesc>
@@ -33,9 +38,19 @@
                     <idno source-id="O1JC114941JC12799" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:08:06 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-094-019-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:00:06.533Z" type="translation-status" status="3" xml:id="UT22084-094-019-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:00:06.533Z" type="text-version" status="0.0.1" xml:id="UT22084-094-019-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
