--- a/translations/kangyur/placeholders/094-014_toh737,960-the_incantation_of_pratyangira_the_powerful.xml
+++ b/translations/kangyur/placeholders/094-014_toh737,960-the_incantation_of_pratyangira_the_powerful.xml
@@ -5,15 +5,20 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">phyir zlog pa stobs can gyi gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">balavatī pratyaṅgirā</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Balavatī pratyaṅgirā</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Pratyaṅgirā, the Powerful</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa phyir zlog pa stobs can zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryabalavatīnāmapratyaṅgirā</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryabalavatīnāmapratyaṅgirā</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">zlog pa stobs can gyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa phyir zlog pa stobs can zhes bya ba/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryabalavatīnāmapratyaṅgirā</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryabalavatīnāmapratyaṅgirā</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-094-014"/>
             </publicationStmt>
             <sourceDesc>
@@ -36,9 +41,19 @@
                     <idno source-id="O1JC114941JC12723" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:35:50.59Z" user="celso">23/09/2021 17:35:50</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-094-014-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:06:26.824Z" type="translation-status" status="3" xml:id="UT22084-094-014-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:06:26.824Z" type="text-version" status="0.0.1" xml:id="UT22084-094-014-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
