--- a/translations/kangyur/placeholders/093-033_toh718,1037-the_incantation_for_developing_insight.xml
+++ b/translations/kangyur/placeholders/093-033_toh718,1037-the_incantation_for_developing_insight.xml
@@ -5,15 +5,20 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">shes rab bskyed pa'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">prajñāvardhanī dhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Prajñāvardhanī dhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī for Developing Insight</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">shes rab bskyed pa zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">prajñāvardhanīnāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Prajñāvardhanīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">shes rab skyed pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">shes rab skyed pa zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">prajñāvardhanīnāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Prajñāvardhanīnāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-093-033"/>
             </publicationStmt>
             <sourceDesc>
@@ -36,9 +41,19 @@
                     <idno source-id="O1JC114941JC12800" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:35:41.758Z" user="celso">23/09/2021 17:35:41</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-093-033-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:17:23.008Z" type="translation-status" status="3" xml:id="UT22084-093-033-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:17:23.008Z" type="text-version" status="0.0.1" xml:id="UT22084-093-033-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
